--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,9 +30,9 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 228 23% 39%;
+        --secondary: 265 69% 88%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
@@ -116,3 +116,14 @@
   animation-delay: 4s;
 }
 
+.text-personal {
+  color: hsl(var(--accent-personal));
+}
+
+.bg-personal {
+  background-color: hsl(var(--accent-personal));
+}
+
+.border-personal {
+  border-color: hsl(var(--accent-personal));
+}
