--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 228 23% 39%;
-        --secondary: 265 69% 88%;
+    --secondary: 280, 15%, 70%;
     --primary-foreground: 0 0% 98%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
